--- a/src/Components/BasicBody/Header.css
+++ b/src/Components/BasicBody/Header.css
@@ -1,5 +1,11 @@
+/* -------------------------Header style--------------------------------- */
+
 nav ul li:hover{
     color: #047FCC;
 }
+.Responsive li:hover{
+    color: black;
+}
 
 
+/* --------------------------Footer Style------------------------------------- */
