--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 } 
-body{
+/* body{
   background-color: #ddf1fa46;
-}
+} */
  li{
     list-style: none;
   }
