--- a/src/Components/Home/Hero.css
+++ b/src/Components/Home/Hero.css
@@ -1,6 +1,7 @@
 .slider-container {
   position: relative;
-  max-width: 100%;
+  max-width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,10 +21,12 @@
 
 .HoverBtn {
   margin: auto;
+  position: relative;
   width: 15rem;
+  
 }
 .CircleHover {
-  position: absolute;
+position: absolute;
   height: 2rem;
   width: 2rem;
   border-radius: 50px;
@@ -40,7 +43,7 @@
 .WWA_Container {
   width: 85%;
   margin: auto;
-  padding: 6.25rem 0;
+  /* padding: 6.25rem 0; */
   display: flex;
   align-items: center;
   position: relative;
@@ -108,7 +111,7 @@
   .WWA_Container {
    
  
-    padding: 3.25rem 0 20rem 0;
+    padding: 0 0 15rem 0;
     height: fit-content;
     
     display: flex;
