Adding About page and contactus page

--- a/src/Components/Careers/Careers.css
+++ b/src/Components/Careers/Careers.css
@@ -1,6 +1,6 @@
 .Careers_Hero{
     width: 100%;
     height: 100vh;
-    background-image: url(../../Images/Career.png);
+    background-image: url(../../Images/Home/Career.png);
     background-size: cover;
 }
