--- a/src/Components/Home/Hero.css
+++ b/src/Components/Home/Hero.css
@@ -60,7 +60,7 @@ position: absolute;
 }
 
 .CWC{
-  background-image: url(../../Images/cwc.png);
+  background-image: url(../../Images/Home/cwc.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
